Fix [#34675] *AFTER 2.69* Info view shows duplicate operators with incorrect values of args

Refactored a bit WM api to generate operator's pystring, now it can also handle correctly macro operators. Thanks to Campbell for the review!